--- a/instrument/package.json
+++ b/instrument/package.json
@@ -27,6 +27,9 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -43,13 +46,18 @@
   "devDependencies": {
     "@types/babel__core": "^7.20.0",
     "@types/babel__traverse": "^7.20.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
     "next": ">=13.0.0"
   }
 }
+
+
 
 
 
